feat: added routes for reviews, various cleanup across the app
